--- a/.github/workflows/weekly-session-sync.yml
+++ b/.github/workflows/weekly-session-sync.yml
@@ -6,6 +6,11 @@ on:
     - cron: '0 1 * * 5'
   workflow_dispatch: # Allow manual triggering for testing
 
+permissions:
+  contents: write
+  issues: write
+  pull-requests: read
+
 jobs:
   sync-session:
     runs-on: ubuntu-latest
