feat: convert deploy workflow to manual trigger only
- Disable automatic deployment on prod branch pushes
- Keep workflow available for manual deployment when needed
- Primary deployment now handled by weekly-session-sync workflow
- Maintains deploy.yml as backup/manual option with same symlink logic

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
 name: Deploy Quartz site
 
 on:
-  push:
-    branches: [ prod ]
+  workflow_dispatch: # Manual trigger only
+  # push:
+  #   branches: [ prod ]
 
 permissions:
   contents: read
